# mcp-schabi

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
src/mcp_schabi/: __init__.py  schabi_client.py  server.py
