[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-schabi"
version = "0.1.0"
description = "MCP Server to retrieve Schabi homework data for multiple children"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.5.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-schabi = "mcp_schabi.server:run"

[tool.setuptools.packages.find]
where = ["src"]
